--- a/analog_module.ioc
+++ b/analog_module.ioc
@@ -20,8 +20,8 @@ Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.0.Instance=DMA2_Stream0
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_NORMAL
+Dma.ADC1.0.MemInc=DMA_MINC_DISABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
@@ -30,8 +30,8 @@ Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC2.1.Instance=DMA2_Stream2
 Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.1.Mode=DMA_NORMAL
+Dma.ADC2.1.MemInc=DMA_MINC_DISABLE
+Dma.ADC2.1.Mode=DMA_CIRCULAR
 Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
@@ -197,6 +197,8 @@ ProjectManager.TemplateDestinationPath=C\:\\Work\\diploma\\analog_module
 ProjectManager.TemplateSourcePath=C\:\\Program Files (x86)\\STMicroelectronics\\STM32Cube\\STM32CubeMX\\db\\extra_templates
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
+ProjectManager.UseDefaultDestinationPath=true
+ProjectManager.UseDefaultSourcePath=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_DAC_Init-DAC-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=72000000
