--- a/analog_module.ioc
+++ b/analog_module.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
-ADC1.ContinuousConvMode=DISABLE
+ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
@@ -15,51 +15,53 @@ ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Resolution=ADC_RESOLUTION_12B
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 ADC1.ScanConvMode=DISABLE
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.ContinuousConvMode=ENABLE
 ADC2.DMAContinuousRequests=ENABLE
 ADC2.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_TRGO
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,DMAContinuousRequests,ExternalTrigConv
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,DMAContinuousRequests,ExternalTrigConv,ScanConvMode,ContinuousConvMode
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
+ADC2.ScanConvMode=DISABLE
 DAC.DAC_Trigger=DAC_TRIGGER_T6_TRGO
 DAC.IPParameters=DAC_Trigger
-Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.2.Instance=DMA2_Stream0
-Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.2.MemInc=DMA_MINC_DISABLE
-Dma.ADC1.2.Mode=DMA_CIRCULAR
-Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC2.1.Instance=DMA2_Stream2
-Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.1.MemInc=DMA_MINC_DISABLE
-Dma.ADC2.1.Mode=DMA_CIRCULAR
-Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
-Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.DAC1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.DAC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.DAC1.0.Instance=DMA1_Stream5
-Dma.DAC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.DAC1.0.MemInc=DMA_MINC_ENABLE
-Dma.DAC1.0.Mode=DMA_NORMAL
-Dma.DAC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.DAC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.DAC1.0.Priority=DMA_PRIORITY_LOW
-Dma.DAC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=DAC1
-Dma.Request1=ADC2
-Dma.Request2=ADC1
+Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.1.Instance=DMA2_Stream0
+Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.1.Mode=DMA_CIRCULAR
+Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC2.0.Instance=DMA2_Stream2
+Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.0.Mode=DMA_CIRCULAR
+Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.DAC1.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DAC1.2.Instance=DMA1_Stream5
+Dma.DAC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DAC1.2.MemInc=DMA_MINC_ENABLE
+Dma.DAC1.2.Mode=DMA_CIRCULAR
+Dma.DAC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC1.2.Priority=DMA_PRIORITY_LOW
+Dma.DAC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC2
+Dma.Request1=ADC1
+Dma.Request2=DAC1
 Dma.RequestsNb=3
 File.Version=6
 KeepUserPlacement=true
@@ -276,13 +278,13 @@ SH.GPXTI13.ConfNb=1
 SH.S_TIM3_ETR.0=TIM3_ETR,ClockSourceETR_Mode2
 SH.S_TIM3_ETR.ConfNb=1
 TIM2.IPParameters=Period,TIM_MasterOutputTrigger
-TIM2.Period=839
+TIM2.Period=869
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.IPParameters=Period,TIM_MasterOutputTrigger
 TIM3.Period=99
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM6.IPParameters=Period,TIM_MasterOutputTrigger
-TIM6.Period=839
+TIM6.Period=5000
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USB_DEVICE.CLASS_NAME_FS=CUSTOMHID
 USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CUSTOM_HID_FS
