--- a/analog_module.ioc
+++ b/analog_module.ioc
@@ -83,24 +83,26 @@ Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PD2
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin18=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin10=PA5
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PD2
+Mcu.Pin16=PB3
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA11
-Mcu.PinsNb=19
+Mcu.Pin5=PC0
+Mcu.Pin6=PC1
+Mcu.Pin7=PA0-WKUP
+Mcu.Pin8=PA1
+Mcu.Pin9=PA4
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -153,6 +155,16 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC0.GPIO_Label=TRIGGER_IN
+PC0.GPIO_PuPd=GPIO_PULLDOWN
+PC0.Locked=true
+PC0.Signal=GPXTI0
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC1.GPIO_Label=TRIGGER_OUT
+PC1.GPIO_PuPd=GPIO_PULLDOWN
+PC1.Locked=true
+PC1.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -273,6 +285,8 @@ SH.ADCx_IN1.0=ADC2_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM3_ETR.0=TIM3_ETR,ClockSourceETR_Mode2
