--- a/analog_module.ioc
+++ b/analog_module.ioc
@@ -88,13 +88,14 @@ Mcu.Pin11=PA11
 Mcu.Pin12=PA12
 Mcu.Pin13=PA13
 Mcu.Pin14=PA14
-Mcu.Pin15=PD2
-Mcu.Pin16=PB3
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin15=PC12
+Mcu.Pin16=PD2
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin20=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
@@ -102,7 +103,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA4
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -165,6 +166,10 @@ PC1.GPIO_Label=TRIGGER_OUT
 PC1.GPIO_PuPd=GPIO_PULLDOWN
 PC1.Locked=true
 PC1.Signal=GPIO_Output
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=PPS
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -184,8 +189,9 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=null
-PD2.GPIOParameters=GPIO_Label
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=TIMER_DRAIN
+PD2.GPIO_PuPd=GPIO_PULLDOWN
 PD2.Signal=S_TIM3_ETR
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
